--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "run.js",
   "scripts": {
     "start": "node run.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
