--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
   "main": "run.js",
   "scripts": {
     "start": "node run.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "test": "node test.js",
+    "test:ci": "node test.js",
+    "build": "node run.js",
+    "docs:build": "mkdir -p docs/build && echo '<h1>Docs</h1>' > docs/build/index.html",
+    "ci": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
+    "typescript-eslint": "^8.46.2"
   },
   "repository": {
     "type": "git",
@@ -28,11 +40,5 @@
   "homepage": "https://github.com/PKUPI/heavens-above#readme",
   "engines": {
     "node": ">=12.10.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "eslint": "^9.38.0",
-    "globals": "^16.4.0",
-    "typescript-eslint": "^8.46.2"
   }
 }
