Setup ESLint properly with GitHub Actions integration
- Added eslint.config.js with flat config format (ESLint 9.x compatible)
- Removed old .eslintrc.js and eslint.config.mjs files
- Fixed undefined variable errors in satellite.js and iridium.js
- Auto-fixed linting issues (quotes, semicolons, trailing spaces, indentation)
- Updated GitHub Actions workflow with dedicated lint job
- Linting now runs before tests and build in CI pipeline
- Added comprehensive linting documentation
- All linting checks passing with only 3 minor warnings

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "run.js",
   "scripts": {
     "start": "node run.js",
-    "lint": "eslint . --ext .js",
+    "lint": "eslint . --ext .js --max-warnings 100",
     "lint:fix": "eslint . --ext .js --fix",
+    "lint:strict": "eslint . --ext .js",
     "test": "node test.js",
     "test:ci": "node test.js",
     "build": "node run.js",
