--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,30 @@ on:
     branches: [main]
 
 jobs:
-  ci:
+  lint:
+    name: Lint Code
     runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: lint
     
     strategy:
       matrix:
@@ -27,17 +49,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-     
       - name: Run tests
         run: npm test
-        continue-on-error: false
 
-      - name: Build project
-        run: npm run build
-        continue-on-error: false
-  code-quality:
+  build:
+    name: Build Project
     runs-on: ubuntu-latest
-    needs: ci
+    needs: [lint, test]
     
     steps:
       - name: Checkout repository
@@ -51,3 +69,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Check for security vulnerabilities
+        run: npm audit --audit-level=moderate
+        continue-on-error: true
