--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,12 @@ name: Continuous Integration
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  lint:
-    name: Lint Code
+  ci:
+    name: CI - Test, Lint, and Build
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,61 +16,25 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-          cache: 'npm'
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Run ESLint
+      - name: Run Linting
         run: npm run lint
+        continue-on-error: false
 
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: lint
-    
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x, 18.x]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
+      - name: Run Tests
         run: npm test
 
-  build:
-    name: Build Project
-    runs-on: ubuntu-latest
-    needs: [lint, test]
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
+      - name: Build Project
         run: npm run build
 
-      - name: Check for security vulnerabilities
-        run: npm audit --audit-level=moderate
-        continue-on-error: true
+      - name: Report Success
+        if: success()
+        run: echo "✅ All checks passed successfully!"
+
+      - name: Report Failure
+        if: failure()
+        run: echo "❌ Some checks failed. Please review the logs above."
