--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,9 @@ on:
 
 # Sets permissions for GitHub Pages deployment
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
-
-# Allow only one deployment at a time
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -46,60 +41,25 @@ jobs:
           cp -r public/* dist/
           echo "Build completed successfully!"
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: production-files
           path: dist/
-          retention-days: 7
-
-  test-deployment:
-    name: Test Deployment Build
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: dist/
-
-      - name: Verify deployment files
-        run: |
-          echo "Verifying deployment artifacts..."
-          if [ ! -f "dist/index.html" ]; then
-            echo "Error: index.html not found!"
-            exit 1
-          fi
-          echo "✅ Deployment files verified successfully"
-          ls -la dist/
 
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    needs: [build, test-deployment]
+    needs: build
+    
+    permissions:
+      pages: write
+      id-token: write
+    
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: dist/
-
-      - name: Setup GitHub Pages
-        uses: actions/configure-pages@v4
-        with:
-          enablement: true
-
-      - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist/
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
@@ -108,4 +68,3 @@ jobs:
         run: |
           echo "✅ Deployment successful!"
           echo "🌐 Your website is live at: ${{ steps.deployment.outputs.page_url }}"
-
