--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,19 @@ on:
     branches: [main]
   workflow_dispatch:
 
-# Sets permissions for GitHub Pages deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  build:
-    name: Build Application
+  build-and-deploy:
+    name: Build and Deploy to GitHub Pages
     runs-on: ubuntu-latest
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout repository
@@ -34,37 +37,30 @@ jobs:
       - name: Run tests
         run: npm test
 
+      - name: Build project
+        run: npm run build
+
       - name: Prepare deployment files
         run: |
-          echo "Preparing deployment artifacts..."
-          mkdir -p dist
-          cp -r public/* dist/
-          echo "Build completed successfully!"
+          echo "📦 Preparing deployment files..."
+          mkdir -p _site
+          cp -r public/* _site/
+          ls -la _site/
+          echo "✅ Files ready for deployment"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/
+          path: _site
 
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build
-    
-    permissions:
-      pages: write
-      id-token: write
-    
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: Deployment Success
+      - name: Display deployment URL
         run: |
-          echo "✅ Deployment successful!"
-          echo "🌐 Your website is live at: ${{ steps.deployment.outputs.page_url }}"
+          echo "================================================"
+          echo "✅ Deployment Successful!"
+          echo "🌐 Your website is live at:"
+          echo "${{ steps.deployment.outputs.page_url }}"
+          echo "================================================"
