--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,10 @@
-name: Deployment Pipeline
+name: Deploy
 
 on:
   push:
     branches: [main]
   workflow_dispatch:
 
-# Prevent multiple deployments running at the same time
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -17,57 +16,42 @@ permissions:
 
 jobs:
   deploy:
-    name: Build and Deploy
     runs-on: ubuntu-latest
-    
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run linting
-        run: npm run lint
-
-      - name: Run tests
-        run: npm test
-
-      - name: Build project
-        run: npm run build
+      - run: npm install
+      
+      # Make sure code quality is good before deploying
+      - run: npm run lint
+      - run: npm test
+      - run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Prepare deployment files
+      # Copy files to deployment directory
+      - name: Prepare files
         run: |
-          echo "📦 Preparing deployment files..."
           mkdir -p _site
           cp -r public/* _site/
-          echo "✅ Files ready for deployment"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: _site
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
 
-      - name: Deployment Success
-        run: |
-          echo "================================================"
-          echo "✅ DEPLOYMENT SUCCESSFUL!"
-          echo "🌐 Your website is live at:"
-          echo "${{ steps.deployment.outputs.page_url }}"
-          echo "================================================"
+      - run: echo "Deployed to ${{ steps.deployment.outputs.page_url }}"
