--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -12,6 +12,8 @@ permissions:
 
 jobs:
   lint:
+    # Run only for PRs from branches in the same repo (not from forks)
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
 
     steps:
@@ -61,6 +63,8 @@ jobs:
         run: npm run lint
 
   tests:
+    # Run only for PRs from branches in the same repo (not from forks)
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
 
     steps:
@@ -93,6 +97,8 @@ jobs:
             });
 
   security:
+    # Run only for PRs from branches in the same repo (not from forks)
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
 
     steps:
@@ -162,6 +168,7 @@ jobs:
             };
             
             const allPassed = Object.values(results).every(r => r === 'success');
+            const fromSameRepo = `From same repo: ${github.context.payload.pull_request?.head?.repo?.full_name === github.context.repo.owner + '/' + github.context.repo.repo}`;
             
             let summary = `## PR Check Summary\n\n`;
             summary += `| Check | Status |\n`;
@@ -169,6 +176,7 @@ jobs:
             summary += `| Linting | ${results.lint === 'success' ? '✅' : '❌'} |\n`;
             summary += `| Tests | ${results.tests === 'success' ? '✅' : '❌'} |\n`;
             summary += `| Security | ${results.security === 'success' ? '✅' : '❌'} |\n`;
+            summary += `\n${fromSameRepo}`;
             summary += `\n${allPassed ? 'All checks passed - ready to merge' : 'Some checks failed - please fix'}`;
             
             github.rest.issues.createComment({
